--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "assignment-one": {
+    "finding-falcone": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/assignment-one",
+            "outputPath": "dist/finding-falcone",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -66,18 +66,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "assignment-one:build"
+            "browserTarget": "finding-falcone:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "assignment-one:build:production"
+              "browserTarget": "finding-falcone:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "assignment-one:build"
+            "browserTarget": "finding-falcone:build"
           }
         },
         "test": {
@@ -114,16 +114,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "assignment-one:serve"
+            "devServerTarget": "finding-falcone:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "assignment-one:serve:production"
+              "devServerTarget": "finding-falcone:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "assignment-one"
+  "defaultProject": "finding-falcone"
 }
